feat: add s3 destination and refactor to support it

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,13 @@
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/supaglue?schema=public
 API_HOST=
 API_KEY=
+PAGE_SIZE=1000
 PROVIDER_NAME=
 CUSTOMER_ID=
 SYNC_PARALLELISM=2
+
+# Optional: If present, will write to S3 instead of Postgres
+AWS_REGION=
+AWS_S3_BUCKET=
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
