--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/json2csv": "^5.0.3",
     "@types/node": "^18.15.3",
     "prisma": "^4.11.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.2"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.296.0",
     "@prisma/client": "^4.11.0",
     "axios": "^1.3.4",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "json2csv": "^6.0.0-alpha.2"
   }
 }
