--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@aws-sdk/client-s3": "^3.296.0",
     "@prisma/client": "^4.11.0",
     "axios": "^1.3.4",
-    "express": "^4.18.2",
-    "json2csv": "^6.0.0-alpha.2"
+    "express": "^4.18.2"
   }
 }
