--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: api
     env: node
-    repo: https://render.com/deploy?repo=https://github.com/supaglue-labs/typescript-syncer.git
+    repo: https://github.com/supaglue-labs/typescript-syncer.git
     buildCommand: yarn install
     startCommand: yarn start_for_s3
     branch: main
