feat: add chroma as a reference destination

--- a/.env.sample
+++ b/.env.sample
@@ -1,10 +1,18 @@
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/supaglue?schema=public
+# Required
 API_HOST=
 API_KEY=
-PAGE_SIZE=1000
+PAGE_SIZE=100
+DESTINATION=chroma
+IS_INCREMENTAL=true
 
-# Optional: If present, will write to S3 instead of Postgres
+# For S3
 AWS_REGION=
 AWS_S3_BUCKET=
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
+
+# For MongoDB
+MONGODB_URI=
+
+# For Chroma
+OPENAI_API_KEY=
