--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chromadb": "^1.4.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "mongodb": "^5.5.0",
     "openai": "^3.2.1"
   }
 }
